fix icon visibility in dark theme

--- a/themes/theme1.less
+++ b/themes/theme1.less
@@ -871,6 +871,18 @@ THE SOFTWARE.
 
 @import "base";
 
+.messages .text-danger {
+  color: #fff;
+}
+
+.messages .text-info {
+  color: #fff;
+}
+
+.messages .caret {
+  color: #fff;
+}
+
 // Cyborg 3.2.0
 // Bootswatch
 // -----------------------------------------------------
